# pymfna

./: .readthedocs.yaml  README.md  README.rst  pyproject.toml  requirements.txt
docs/: Makefile  requirements.txt
docs/source/: api.rst  conf.py  guide.rst  index.rst  installation.rst  license.rst
pymfna/: __init__.py  mfna.py  mfnaclient.py
wsdl/: api.wsdl.soappy
